--- a/ProjectProposal/project-proposal.tex
+++ b/ProjectProposal/project-proposal.tex
@@ -1,3 +1,4 @@
+\documentclass{article}
 \documentclass[11pt]{article}
 \usepackage[margin=2.54cm]{geometry}
 \usepackage[colorlinks,urlcolor=blue]{hyperref}
